--- a/src/br/ip2/easylend/view/css/front_end.css
+++ b/src/br/ip2/easylend/view/css/front_end.css
@@ -42,7 +42,7 @@
 
 .Label{
 
-    -fx-text-fill: #00e2df;
+    -fx-text-fill: #1e00e2;
     -fx-font-family: "Arial Narrow";
     -fx-font-size: 14pt;
     -fx-padding: 2px 2px 1px 2px;
