--- a/src/br/ip2/easylend/view/fxml/home.fxml
+++ b/src/br/ip2/easylend/view/fxml/home.fxml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
 
-<AnchorPane fx:id="anchorHome" prefHeight="784.0" prefWidth="1382.0" styleClass="background" stylesheets="@../css/home.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ip2.easylend.view.front_controllers.HomeController">
- <AnchorPane fx:id="feedNoticias" layoutX="415.0" layoutY="165.0" minHeight="0.0" minWidth="0.0" prefHeight="599.0" prefWidth="713.0" />
-
-    <Pane layoutX="14.0" layoutY="176.0" prefHeight="347.0" prefWidth="329.0" styleClass="background-pane">
-      <children>
-          <Label layoutX="14.0" layoutY="14.0" styleClass="title" text="Para Você Hoje" />
-      </children></Pane>
-    <Label layoutX="415.0" layoutY="129.0" styleClass="title" text="Feed de Notícias" />
-   <Pane fx:id="pnPost" layoutX="76.0" layoutY="54.0" prefHeight="75.0" prefWidth="201.0">
-      <children>
-          <Label fx:id="lblpost" layoutX="14.0" layoutY="14.0" text="Compartilhe com os Amigos" />
-      </children></Pane>
+<AnchorPane fx:id="anchorHome" prefHeight="600" prefWidth="800" styleClass="background" stylesheets="@../css/home.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ip2.easylend.view.front_controllers.HomeController">
+ <AnchorPane fx:id="feedNoticias" layoutY="158.0" minHeight="0.0" minWidth="0.0" prefHeight="550.0" prefWidth="430.0" />
+    <Label layoutX="14.0" layoutY="113.0" styleClass="title" text="Feed de Notícias" />
+   <ScrollPane layoutX="450.0" layoutY="210.0" prefHeight="500.0" prefWidth="350.0">
+     <content>
+       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="500.0" prefWidth="350.0" />
+     </content>
+   </ScrollPane>
+   <Label layoutX="440.0" layoutY="171.0" style="-fx-text-fill: white;" text="Para vocẽ hoje" />
 
 
 </AnchorPane>
