--- a/src/br/ip2/easylend/view/fxml/galeria.fxml
+++ b/src/br/ip2/easylend/view/fxml/galeria.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
@@ -20,20 +21,11 @@
                      <children>
                         <ButtonBar layoutX="66.0" prefHeight="40.0" prefWidth="200.0">
                           <buttons>
-                              <Label fx:id="lblpreco" alignment="CENTER" prefHeight="33.0" style="-fx-background-color: blue;" text="preco" />
-                            <Button mnemonicParsing="false" text="Adquiri" />
+                              <Label fx:id="lblPreco" alignment="CENTER" prefHeight="33.0" style="-fx-background-color: blue;" text="preco" />
+                            <Button fx:id="btnAdquirir" mnemonicParsing="false" text="Adquiri" />
                           </buttons>
                         </ButtonBar>
-                        <ScrollPane layoutY="109.0" prefHeight="200.0" prefWidth="276.0">
-                          <content>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="280.0">
-                                 <children>
-                                    <Label fx:id="lblSinopse" layoutX="21.0" layoutY="23.0" text="Label" />
-                                 </children>
-                              </AnchorPane>
-                          </content>
-                        </ScrollPane>
-                        <Label fx:id="lblTitulo" layoutY="32.0" prefHeight="36.0" prefWidth="99.0" styleClass="Label" text="Titulo" />
+                        <Label fx:id="lblTitulo" layoutY="40.0" prefHeight="40.0" prefWidth="280.0" styleClass="Label" text="Titulo" />
                         <Label layoutY="82.0" styleClass="Label" text="Sinopse">
                            <font>
                               <Font size="22.0" />
@@ -41,13 +33,14 @@
                         </Label>
                         <Label layoutY="343.0" prefHeight="27.0" prefWidth="58.0" style="-fx-background-color: blue;" stylesheets="@../css/front_end.css" text="Duração:" />
                         <Label layoutX="71.0" layoutY="348.0" text="Label" />
-                        <Label fx:id="lblH" layoutX="71.0" layoutY="348.0" style="-fx-background-color: blue;" text="H" />
+                        <Label fx:id="lblHoras" layoutX="71.0" layoutY="348.0" style="-fx-background-color: blue;" text="H" />
                         <Label layoutX="81.0" layoutY="348.0" style="-fx-background-color: blue;" text="H" />
-                        <Label fx:id="lblMin" layoutX="100.0" layoutY="348.0" style="-fx-background-color: blue;" text="Min" />
+                        <Label fx:id="lblMinutos" layoutX="100.0" layoutY="348.0" style="-fx-background-color: blue;" text="Min" />
                         <Label layoutX="120.0" layoutY="348.0" style="-fx-background-color: blue;" text="min" />
                         <Label layoutY="394.0" prefHeight="27.0" prefWidth="58.0" style="-fx-background-color: blue;" stylesheets="@../css/front_end.css" text="Gênero: " />
-                        <Label fx:id="lblGenero" layoutX="71.0" layoutY="394.0" prefHeight="27.0" prefWidth="58.0" styleClass="Label" stylesheets="@../css/front_end.css" text="Gênero" />
+                        <Label fx:id="lblGenero" layoutX="73.0" layoutY="386.0" prefHeight="44.0" prefWidth="135.0" styleClass="Label" stylesheets="@../css/front_end.css" text="Gênero" />
                         <Button fx:id="btnTrailler" layoutX="74.0" layoutY="471.0" mnemonicParsing="false" text="Assistir Trailler" />
+                        <TextArea fx:id="txtaSinopse" layoutY="122.0" prefHeight="200.0" prefWidth="280.0" />
                      </children>
                   </AnchorPane>
                </content>
