--- a/src/br/ip2/easylend/view/fxml/menu.fxml
+++ b/src/br/ip2/easylend/view/fxml/menu.fxml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-
+<?import javafx.scene.control.*?>
 <MenuBar prefHeight="30.0" prefWidth="800" styleClass="menu-bar" stylesheets="@../css/front_end.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ip2.easylend.view.front_controllers.MenuController">
         <Menu mnemonicParsing="false" styleClass="menu" text="Eu">
             <MenuItem mnemonicParsing="false" onAction="#toHome" styleClass="menu-item" text="Home" />
