--- a/src/br/ip2/easylend/view/fxml/perfil.fxml
+++ b/src/br/ip2/easylend/view/fxml/perfil.fxml
@@ -1,56 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane fx:id="anchorPerfil" prefHeight="400" prefWidth="600" styleClass="background" stylesheets="@../css/front_end.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ip2.easylend.view.front_controllers.PerfilController">
-   <children>
-
-             
-      <GridPane layoutX="300.0" layoutY="30.0" prefHeight="206.0" prefWidth="400.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints />
-            <ColumnConstraints />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-
-                <Label styleClass="Label" text="Nome de Usuário: " GridPane.columnIndex="0" GridPane.rowIndex="0" />
-          <Label prefHeight="25.0" prefWidth="137.0" styleClass="Label" text="Seus FIlmes" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-          <Label styleClass="Label" text="Créditos: " GridPane.columnIndex="0" GridPane.rowIndex="2" />
-
-      
-          <Label fx:id="lblNomeUsuario" styleClass="Label" text="login" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-          <Label fx:id="lblFilmes" layoutX="40.0" styleClass="Label" text="Qtd de Filmes" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-          <Label fx:id="lblCreditos" styleClass="Label" text="Creditos disponiveis" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-         <Label fx:id="lblMsg" styleClass="Label" text="tipo cliente" GridPane.rowIndex="3" />
-         <Button fx:id="btnAlterarLogin" mnemonicParsing="false" onAction="#altrarLogin" text="Alterar" GridPane.columnIndex="2" />
-         <Button fx:id="btnAddFIlme" layoutX="277.0" layoutY="24.0" mnemonicParsing="false" onAction="#addFilme" text="Adicionar" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-         <Button fx:id="btnCompCredito" layoutX="277.0" layoutY="76.0" mnemonicParsing="false" onAction="#compCredito" text="Comprar" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-         <Button fx:id="btnMudarTipoCliente" layoutX="277.0" layoutY="127.0" mnemonicParsing="false" onAction="#mudarTipo" text="Alterar" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-         <Label fx:id="lblTipoCliente" prefHeight="39.0" prefWidth="106.0" styleClass="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      </GridPane>
-      <Label layoutX="74.0" layoutY="246.0" styleClass="Label" text="Meus Favoritos" />
-      <Label fx:id="lblErro" layoutX="305.0" layoutY="415.0" prefHeight="39.0" prefWidth="495.0" />
-      <Pane fx:id="avatar" layoutX="41.0" layoutY="35.0" prefHeight="194.0" prefWidth="215.0" />
-      <ScrollPane layoutX="74.0" layoutY="275.0" prefHeight="250.0" prefWidth="573.0">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="252.0" prefWidth="576.0" />
-        </content>
-      </ScrollPane>
-       <Button fx:id="btnMaisPerfil" layoutX="400.0" layoutY="246.0" styleClass="Label" text="Mais do perfil" />
-   </children>
-</AnchorPane>
+<BorderPane fx:id="pnMain" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../css/perfil.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ip2.easylend.view.front_controllers.PerfilController">
+   <center>
+      <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Pane fx:id="pnAvatar" layoutX="43.0" layoutY="54.0" prefHeight="200.0" prefWidth="200.0" />
+            <Label layoutX="263.0" layoutY="70.0" styleClass="Label" text="Nome: " />
+            <Label layoutX="263.0" layoutY="118.0" styleClass="Label" text="Créditos: " />
+            <Label layoutX="263.0" layoutY="145.0" styleClass="Label" text="Tipo cliente:" />
+            <Label layoutX="263.0" layoutY="93.0" styleClass="Label" text="Email" />
+            <Label fx:id="lblNome" layoutX="327.0" layoutY="70.0" text="Label" />
+            <Label fx:id="lblEmail" layoutX="327.0" layoutY="93.0" text="Label" />
+            <Label fx:id="lblCreditos" layoutX="327.0" layoutY="118.0" text="Label" />
+            <Label fx:id="lblTipoCliente" layoutX="341.0" layoutY="145.0" text="Label" />
+            <ScrollPane layoutX="100.0" layoutY="300.0" prefHeight="277.0" prefWidth="595.0">
+               <content>
+                  <AnchorPane layoutX="100.0" layoutY="200.0" minHeight="0.0" minWidth="0.0" prefHeight="300.0" prefWidth="599.0" />
+               </content>
+            </ScrollPane>
+            <ButtonBar layoutX="201.0" layoutY="177.0" prefHeight="43.0" prefWidth="426.0">
+               <buttons>
+                  <Button fx:id="btnMudarLogin" mnemonicParsing="false" onAction="#alterarLogin" text="Alterar Login" />
+                  <Button fx:id="btnMudarPlano" mnemonicParsing="false" onAction="#mudarTipo" text="Mudar Plano" />
+                  <Button fx:id="btnCompra" mnemonicParsing="false" onAction="#compCredito" text="Comprar" />
+                  <Button fx:id="btnMais" mnemonicParsing="false" onAction="#addFilme" text="Mais" />
+               </buttons>
+            </ButtonBar>
+            <Label layoutX="110.0" layoutY="266.0" text="Meus Filmes" />
+         </children>
+      </Pane>
+   </center>
+</BorderPane>
