--- a/src/br/ip2/easylend/view/fxml/galeria.fxml
+++ b/src/br/ip2/easylend/view/fxml/galeria.fxml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
+
 <BorderPane fx:id="pnMain" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../css/front_end.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ip2.easylend.view.front_controllers.GaleriaController">
    <center>
       <SplitPane dividerPositions="0.3609022556390977" prefHeight="160.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -37,9 +45,9 @@
                   </AnchorPane>
                </content>
             </ScrollPane>
-            <ScrollPane prefHeight="600.0" prefWidth="535.0">
+            <ScrollPane prefHeight="600.0" prefWidth="500.0">
               <content>
-                <AnchorPane fx:id="telaCatalogo" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="530.0">
+                <AnchorPane fx:id="telaCatalogo" minHeight="0.0" minWidth="0.0" prefHeight="2000.0" prefWidth="2000.0">
                      <children>
                         <Pane fx:id="comedia" layoutX="100.0" onMouseReleased="#toComedia" prefHeight="50.0" prefWidth="100.0" styleClass="pnGenero">
                            <children>
