--- a/src/br/ip2/easylend/view/fxml/perfil.fxml
+++ b/src/br/ip2/easylend/view/fxml/perfil.fxml
@@ -26,16 +26,22 @@
                   <AnchorPane layoutX="100.0" layoutY="200.0" minHeight="0.0" minWidth="0.0" prefHeight="300.0" prefWidth="599.0" />
                </content>
             </ScrollPane>
-            <ButtonBar layoutX="201.0" layoutY="177.0" prefHeight="43.0" prefWidth="426.0">
+            <ButtonBar layoutX="235.0" layoutY="177.0" prefHeight="43.0" prefWidth="426.0">
                <buttons>
                   <Button fx:id="btnMudarLogin" mnemonicParsing="false" onAction="#alterarLogin" text="Alterar Login" />
                   <Button fx:id="btnMudarPlano" mnemonicParsing="false" onAction="#mudarTipo" text="Mudar Plano" />
                   <Button fx:id="btnCompra" mnemonicParsing="false" onAction="#compCredito" text="Comprar" />
-                  <Button fx:id="btnMais" mnemonicParsing="false" onAction="#addFilme" text="Mais" />
+                  <Button fx:id="btnMais" mnemonicParsing="false" onAction="#toMais" text="Mais" />
                </buttons>
             </ButtonBar>
             <Label layoutX="110.0" layoutY="266.0" text="Meus Filmes" />
          </children>
       </Pane>
    </center>
+   <right>
+      <Pane prefHeight="600.0" prefWidth="13.0" BorderPane.alignment="CENTER" />
+   </right>
+   <bottom>
+      <Pane prefHeight="22.0" prefWidth="800.0" BorderPane.alignment="CENTER" />
+   </bottom>
 </BorderPane>
