--- a/src/br/ip2/easylend/view/fxml/perfil.fxml
+++ b/src/br/ip2/easylend/view/fxml/perfil.fxml
@@ -23,7 +23,7 @@
             <Label fx:id="lblTipoCliente" layoutX="341.0" layoutY="145.0" text="Label" />
             <ScrollPane layoutX="100.0" layoutY="300.0" prefHeight="277.0" prefWidth="595.0">
                <content>
-                  <AnchorPane layoutX="100.0" layoutY="200.0" minHeight="0.0" minWidth="0.0" prefHeight="300.0" prefWidth="599.0" />
+                  <AnchorPane fx:id="pnClienteFilmes" layoutX="100.0" layoutY="200.0" minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="600.0" />
                </content>
             </ScrollPane>
             <ButtonBar layoutX="235.0" layoutY="177.0" prefHeight="43.0" prefWidth="426.0">
@@ -31,7 +31,7 @@
                   <Button fx:id="btnMudarLogin" mnemonicParsing="false" onAction="#alterarLogin" text="Alterar Login" />
                   <Button fx:id="btnMudarPlano" mnemonicParsing="false" onAction="#mudarTipo" text="Mudar Plano" />
                   <Button fx:id="btnCompra" mnemonicParsing="false" onAction="#compCredito" text="Comprar" />
-                  <Button fx:id="btnMais" mnemonicParsing="false" onAction="#toMais" text="Mais" />
+                  <Button fx:id="btnMais" mnemonicParsing="false" onAction="#toMais" text="Detalhes" />
                </buttons>
             </ButtonBar>
             <Label layoutX="110.0" layoutY="266.0" text="Meus Filmes" />
