--- a/src/br/ip2/easylend/view/fxml/home.fxml
+++ b/src/br/ip2/easylend/view/fxml/home.fxml
@@ -8,7 +8,7 @@
     <Label layoutX="14.0" layoutY="113.0" styleClass="title" text="Feed de Notícias" />
    <ScrollPane layoutX="450.0" layoutY="210.0" prefHeight="500.0" prefWidth="350.0">
      <content>
-       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="500.0" prefWidth="350.0" />
+       <AnchorPane fx:id="anSugestoes" minHeight="0.0" minWidth="0.0" prefHeight="500.0" prefWidth="350.0" />
      </content>
    </ScrollPane>
    <Label layoutX="440.0" layoutY="171.0" style="-fx-text-fill: white;" text="Para você hoje" />
